@@ -1,5 +1,5 @@
 ##
-## Configuration file for ncmpc (~/.ncmpc/config)
+## Configuration file for ncmpc (~/.config/ncmpc/config)
 ##
 
 ############## Connection ###################
