@@ -1,5 +1,5 @@
 ##
-## Key bindings for ncmpc (~/.ncmpc/keys)
+## Key bindings for ncmpc (~/.config/ncmpc/keys)
 ## 
 ##
 ## Its possible to bind maximum three keys to a command
